--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "Observe object",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test"
+    "version:major": "webpack --env.major && npm run-script doc && version-to-tag.sh && npm publish",
+    "version:minor": "webpack --env.minor && npm run-script doc && version-to-tag.sh && npm publish",
+    "version:patch": "webpack --env.patch && npm run-script doc && version-to-tag.sh && npm publish",
+    "build": "webpack --progress",
+    "test": "mocha test",
+    "doc": "jsdoc2md --template README.hbs --no-gfm --files src/spyo.js > README.md"
   },
   "repository": {
     "type": "git",
@@ -23,6 +28,7 @@
   },
   "homepage": "https://github.com/fabioricali/spyo#readme",
   "dependencies": {
+    "arrayme": "^1.0.2",
     "clone": "^2.1.1",
     "defaulty": "^2.0.0"
   },
@@ -32,6 +38,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "bejs": "^2.0.0",
+    "jsdoc-to-markdown": "^4.0.1",
     "mocha": "^4.0.1",
     "unminified-webpack-plugin": "^1.4.2",
     "webpack": "^3.10.0",
